change DateRange to record, some other small fixes